v_utils_macros/tests/compile_fail/compact_format_duplicate_first_char.stderr
error: proc-macro derive panicked
 --> $DIR/v_utils_macros/tests/compile_fail/compact_format_duplicate_first_char.rs:5:10
  |
5 | #[derive(CompactFormatNamed, Debug)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = help: message: Field names must be unique

error: aborting due to 1 previous error

